--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "fawn": "^2.1.5",
     "joi": "^14.3.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
