--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "fawn": "^2.1.5",
     "joi": "^14.3.0",
+    "joi-objectid": "^2.0.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.9",
