--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fawn": "^2.1.5",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
