--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.3",
     "config": "^3.0.1",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi": "^14.3.0",
     "joi-objectid": "^2.0.0",
@@ -21,6 +22,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.9",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "winston": "^3.1.0"
   }
 }
