--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
@@ -22,10 +22,15 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.9",
+    "npm": "^6.5.0",
     "package.json": "^2.0.1",
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "@types/mongoose": "^5.3.7",
+    "eslint": "^5.12.0",
+    "eslint-config-google": "^0.11.0",
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   }
 }
