--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.23.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "npm": "^6.5.0",
     "package.json": "^2.0.1",
